<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<EditText
    android:id="@+id/email"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/enter_email_address"
    android:layout_centerHorizontal="true"/>

<EditText
    android:id="@+id/password"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/email"
    android:layout_marginTop="10dp"
    android:hint="@string/enter_password"
    android:layout_centerHorizontal="true"/>

<Button
    android:id="@+id/signup"
    android:layout_marginTop="1dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/password"
    android:text="@string/register"/>

<TextView
    android:id="@+id/log_text"
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/already_a_user_try_loggin_in"
    android:textSize="24sp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/signup"/>
</RelativeLayout>