<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/emailT"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_email_address"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/passT"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailT"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/logon"
        android:layout_marginTop="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passT"
        android:text="@string/lgIn"/>


</RelativeLayout>